ipc/ipdl/test/ipdl/error/Nullable.ipdl
protocol Nullable {
child:
    async Msg(nullable int i);
};
